--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,102 +1,159 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>App Idea</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel= "stylesheet" href= "style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 90%;
-        margin: 200;
-        padding: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <h1><center>Find a Grocery!</center></h1>
-    <form>
-        <p> Enter item here:
-            <input name= "location1" />
-        </p>
-        <button type = "submit"><center> Submit</center></button>
+    <html>
+      <head>
+        <title>App Idea</title>
+        <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
+        <!-- Compiled and minified CSS -->
+        <link rel= 'stylesheet' href= 'css/style.css'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+        <meta charset="utf-8">
+        <style>
+          /* Always set the map height explicitly to define the size of the div
+           * element that contains the map. */
+          #map {
+            height: 100%;
+          }
+          /* Optional: Makes the sample page fill the window. */
+          html, body {
+            height: 90%;
+            margin: 200;
+            padding: 0;
+          }
+        </style>
+      </head>
+      <body>
+        <nav class= "white navbar navbar-default">
+            <div class="nav-wrapper">
+                <a href="#" class="left brand-logo"><img src= "http://www.freelogovectors.net/wp-content/uploads/2016/12/airbnb_logo.png" width= 30px height=30px/></a>
+                <i class="material-icons left">search</i>
+                <form>
+                    <div class="input-field left">
+                      <input id="search" type="search" required>
+                      <label class="label-icon" for="search">Search</label>
+                    </div>
+                </form>
+
+                <ul id="nav-mobile" class="right right hide-on-med-and-down">
+                    <li class= "navtext" id= "first"><a href="#"><font color= "black">No time to host?</font></a></li>
+                    <li class= "navtext" id= "second"><a href="#"><font color= "black">Become a Host</font></a></li>
+                    <li class= "navtext" id= "third"><a href="#"><font color= "black">Help</font></a></li>
+                    <li class= "navtext" id= "fourth"><a href="#"><font color= "black">Sign Up</font></a></li>
+                    <li class= "navtext" id= "fifth"><a href="#"><font color= "black">Log In</font></a></li>
+                    <hr />
+                </ul>
+            </div>
+        </nav>
+        <h1><center>Find a Grocery!</center></h1>
+        <form>
+            <p> Enter item here:
+                <input name = 'location1' id = "location2"/>
+            </p>
+            <button type = 'submit' id = "submitButton" ><center> Submit</center></button>
+            
+       </form>
+
+        <div id='map'></div>
         
-    </form>
-    <div id="map"></div>
-    <script>
-        var data = `https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=${pos.lat},${pos.lng}&radius=500&type=store&keyword=${input}&key=AIzaSyBE_eM_zuZbK1AL_3_yBApX-o9bZClXmKc`
-        var latitudeOfInput = data.results.geometry.location.lat
-        var longitudeOfInput = data.results.geometry.location.lng
-      var map, infoWindow;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 15
-        });
-        //infoWindow = new google.maps.InfoWindow;
-        var pos
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
+         <script>
+          //first: on loading page, I want the regular map with one marker at current location to show
+          //second: when user inputs a store name and clicks submit, I want the page to display the regular map with the additional marker at the nearest store with the user_input name
+          //var input = document.getElementById('location1').value
+          var pos
+          
+    
             
-            pos2 = {
-                lat: latitudeOfInput,
-                lng: longitudeOfInput
-            };
-            //infoWindow.setPosition(pos);
-            //infoWindow.setContent('Location found.');
-            //infoWindow.open(map);
-            var marker = new google.maps.Marker({
-              position: pos,
-              map: map
-            });
-            map.setCenter(pos);
+           var map, infoWindow;
+            function initMap() {
+              map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: -34.397, lng: 150.644},
+                zoom: 15
+              });
+              //infoWindow = new google.maps.InfoWindow;
+              
+              // Try HTML5 geolocation.
+              if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                  pos = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                  };
+                  
+                  map.setCenter(pos);
+                  
+                  getStoreLocation()
+                  
+    
+                  var marker = new google.maps.Marker({
+                    position: pos,
+                    map: map
+                  });
+     
+                }, function() {
+                  handleLocationError(true, infoWindow, map.getCenter());
+                });
+                
+              } else {
+                // Browser doesn’t support Geolocation
+                handleLocationError(false, infoWindow, map.getCenter());
+              }
+              
+              
+            }
             
-            var marker2 = new google.maps.Marker({
-                position: pos2,
-                map: map
-            });
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      }
-
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
+            
+    
       
-    </script>
-    <!---<script src = "script.js"></script>--->
-       
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_eM_zuZbK1AL_3_yBApX-o9bZClXmKc&callback=initMap">
-    </script>
-
-  </body>
-
-</html>
-
+           function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+              infoWindow.setPosition(pos);
+              infoWindow.setContent(browserHasGeolocation ?
+                                    'Error: The Geolocation service failed.' :
+                                    'Error: Your browser doesn\‘t support geolocation.');
+              infoWindow.open(map);
+            }
+            
+          function getStoreLocation(){
+              var input = document.getElementById('submitButton').value
+              var apiKey = 'AIzaSyDUWTdknyhqy6iOYA4y8zbR6FJN_tamIaA'
+              var url = `https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=${pos.lat},${pos.lng}&radius=500&keyword=${input}&key=${apiKey}`              
+            
+              fetch(url)
+              .then(function(data){
+                return data.json()
+            //to actually get the data and not the promise, write above and below
+              })
+              .then(function(json){
+                console.log(json)
+                var latitudeOfInput = json.results[0].geometry.location.lat
+                var longitudeOfInput = json.results[0].geometry.location.lng
+                var pos2 = {
+                  lat: latitudeOfInput,
+                  lng: longitudeOfInput
+                };
+                
+                var marker2 = new google.maps.Marker({
+                  position: pos2,
+                  map: map
+                });
+              })
+          }
+             
+          }
+                  
+    
+          
+    
+         </script>
+    
+        
+        <script async defer
+        src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_eM_zuZbK1AL_3_yBApX-o9bZClXmKc&callback=initMap'>
+        </script>
+        
+    
+     </body>
+    
+    </html>
