--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div class= "navbar-fixed">
-        <nav class= "teal navbar navbar-default">
+        <nav class= "teal darken-2 navbar navbar-default">
                 <div class="nav-wrapper">
                     <a href="/home" class="left brand-logo" id= "logoName"><font size= "10">GoGrocery</font></a>
                     <ul id="nav-mobile" class="right">
@@ -42,6 +42,20 @@
                 </div>
         </nav>
     </div> 
+    <script>
+          
+      var url = `https://www.supermarketapi.com/api.asmx/SearchByProductName?APIKEY=5edf605ff1&ItemName=tomato`
+      fetch(url)
+       .then(function(xml){
+             return xmlToJson(xml)
+       })
+      .then(function(json){
+             console.log(json)
+       })
+       .catch(function(error){
+           console.log(error)
+       })
+    </script> 
     <div class="container">
         <h1 id= "findAGrocery"><center>Find a Grocery!</center></h1>
         <form>
@@ -146,6 +160,8 @@
     <script async defer
         src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBE_eM_zuZbK1AL_3_yBApX-o9bZClXmKc&callback=initMap'>
     </script>
+    
+    
 
  
     
